--- a/index.html
+++ b/index.html
@@ -21,15 +21,37 @@
 <body>
   <header>
     <h1>JavaScript Advanced Topics</h1>
+     <p>JavaScript Crash Course with Advanced topic</p>
   </header>
 
   <main>
-    <p>JavaScript Crash Course with Advanced topic</p>
+   
+  <section class="container">
+      <form id="my-form">
+        <h1>Add User</h1>
+        <div class="msg"></div>
+        <div>
+          <label for="name">Name:</label>
+          <input type="text" id="name">
+        </div>
+        <div>
+          <label for="email">Email:</label>
+          <input type="text" id="email">
+        </div>
+        <input class="btn" type="submit" value="Submit">
+      </form>
+
+      <ul id="users"></ul>
+
+      <ul class="items">
+        <li class="item">Item 1</li>
+        <li class="item">Item 2</li>
+        <li class="item">Item 3</li>
+      </ul>
+    </section>
   </main>
 
-  
-
   <noscript>Your browser don't support JavaScript!</noscript>
-  <script src="main.js"></script>
+  <script src="main2.js"></script>
 </body>
 </html>
