form validation completed

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
      <p>JavaScript Crash Course with Advanced topic</p>
   </header>
 
-  <main>
    
   <section class="container">
       <form id="my-form">
@@ -43,15 +42,13 @@
 
       <ul id="users"></ul>
 
-      <ul class="items">
+      <!-- <ul class="items">
         <li class="item">Item 1</li>
         <li class="item">Item 2</li>
         <li class="item">Item 3</li>
-      </ul>
+      </ul> -->
     </section>
-  </main>
 
-  <noscript>Your browser don't support JavaScript!</noscript>
   <script src="main2.js"></script>
 </body>
 </html>
